public/style.css
body {
  margin: 0;
  width: 100vw;
}

hr {
  width: 100%;
  margin: auto;
}

a {
  text-decoration: none;
}

button {
  background-color: #98bf64;
  color: white;
  padding: 1em 4em;
  margin: 1em auto;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

button:hover {
  background-color: #b4db7e;
}

.pixel-font {
  font-family: 'Press Start 2P', cursive;
}

.sprite {
  height: 40px;
  width: 40px;
}

.sidebarStyle {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
  margin: 12px;
  background-color: #404040;
  color: #ffffff;
  z-index: 1 !important;
  padding: 6px;
  font-weight: bold;
}

.orgDetails {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}
.orgImg {
  padding: 20px;
}

.orgInfo {
  padding: 20px;
}

.donation {
  padding-top: 20px;
}

#authnav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

